--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -2,11 +2,11 @@
   <id>com.your.company.unique.plugin.id</id>
   <name>myplus-generator</name>
   <version>1.0</version>
-  <vendor email="hzqsultan@qq.com" url="https://github.com/SultanDebug">contact sultan</vendor>
+  <vendor email="hzqsultan@qq.com" url="https://github.com/SultanDebug/mybatis-plus-generator-plugin">contact sultan</vendor>
 
   <description><![CDATA[
       hzqsultan@qq.com
-      https://github.com/SultanDebug
+      https://github.com/SultanDebug/mybatis-plus-generator-plugin
     ]]></description>
 
   <change-notes><![CDATA[
